--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -11,7 +11,9 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   padding-right: 2%;
-  background-color: var(--light_blue);
+  background-color: var(--light_blue); 
+  transition: all 0.5s;
+  z-index: 1;
 }
 
 nav ul {
