--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -117,6 +117,30 @@ nav ul li a:not(:hover) + .line {
   display: none;
 }
 
+nav {
+  top: -200px;
+}
+
+.popchat, .up {
+  position: fixed;
+  left: 94vw;
+  bottom: 4vh;
+  background-color: var(--light_blue);
+  width: 55px;
+  height: 55px;
+  border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.up {
+  bottom: 14vh;
+  display: none;
+}
+
 @keyframes title {
   0% {
     transform: translate(-100%);
@@ -142,6 +166,7 @@ nav ul li a:not(:hover) + .line {
     height: 200px;
   }
 }
+
 
 @media (max-width: 1147px) {
   .content_media div label {
@@ -185,11 +210,16 @@ nav ul li a:not(:hover) + .line {
   nav ul li .line {
     background-color: var(--light_blue);
   }
-  /* 
-  .animate_bar {
-    animation-name: navBar;
-    animation-duration: 1s;
-    animation-fill-mode: initial;
-    animation-iteration-count: 1;
-  } */
+
+  nav ul li:first-child picture img {
+    width: 72px;
+  }
+
+  .popchat, .up {
+    left: 80vw;
+  }
+  .up {
+    bottom: 11vh;
+  }
+  
 }
