--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -8,3 +8,7 @@
 html {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+
+.label {
+  color: var(--light_blue);
+}
