--- a/assets/styles/cards.css
+++ b/assets/styles/cards.css
@@ -30,7 +30,7 @@
     border-radius: 10px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center;     */
 }
 
 .card picture img {
