--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -154,11 +154,11 @@ nav {
 
 .content_media div .logo img {
   width: 30%;
-  /* animation-name: logo;
+  animation-name: logo;
   animation-duration: 2.5s;
   animation-fill-mode: both;
   animation-iteration-count: 1;
-  animation-delay: 0.5s; */
+  animation-delay: 0.5s;
 }
 
 @keyframes title {
