--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -138,6 +138,36 @@ nav {
   cursor: pointer;
 }
 
+.faceboock picture img,
+.instagram picture img,
+.whatsapp picture img {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+
+.faceboock,
+.instagram,
+.whatsapp {
+  position: fixed;
+  bottom: 88px;
+  left: 93vw;
+  z-index: 1;
+  width: 55px;
+}
+
+.social {
+  transition: all 0.5s;
+}
+
+.instagram {
+  bottom: 150px;
+}
+
+.whatsapp {
+  bottom: 210px;
+}
+
 .up {
   bottom: 100px;
   display: none;
@@ -255,21 +285,24 @@ nav {
 
 @media (max-width: 1020px) {
   .popchat,
-  .up {
+  .up,
+  .social {
     left: 90vw;
   }
 }
 
 @media (max-width: 726px) {
   .popchat,
-  .up {
+  .up,
+  .social {
     left: 87vw;
   }
 }
 
 @media (max-width: 550px) {
   .popchat,
-  .up {
+  .up,
+  .social {
     left: 83vw;
   }
 }
