--- a/assets/styles/sections.css
+++ b/assets/styles/sections.css
@@ -1,57 +1,148 @@
 .content_sect {
-    background-color: var(--strong_blue);
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 15px;
-    padding: 1rem;    
-    color: #fff;
+  background-color: var(--strong_blue);
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
+  padding: 1rem;
+  color: #fff;
 }
 
 .content_sect picture img {
-    width: 100%;
+  width: 100%;
 }
 
 .content_sect picture {
-    flex: 1;
-    flex-basis: 200px;
+  flex: 1;
+  flex-basis: 200px;
 }
 
 .content_sect div {
-    display: flex;
-    flex-direction: column;
-    padding-top: 15px;
-    flex: 5;
-    flex-basis: 500px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 15px;
+  flex: 5;
+  flex-basis: 500px;
 }
 
 .content_sect div p {
-    font-size: clamp(16px, 4vw, 19px);
+  font-size: clamp(16px, 4vw, 19px);
 }
 
 .content_sect div h2 {
-    font-size: clamp(19px, 5vw, 25px);
+  font-size: clamp(19px, 5vw, 25px);
 }
 
 section .content_sect:nth-child(2) {
-    background-color: #fff;
-    color: rgb(17, 16, 16);
+  background-color: #fff;
+  color: rgb(17, 16, 16);
 }
 
 section .content_sect:nth-child(2) div {
-    order: 1;
+  order: 1;
 }
 
 section .content_sect:nth-child(2) picture {
-    order: 2;
+  order: 2;
 }
 
 @media (max-width: 763px) {
-    .content_sect picture {
-        order: 2;
-    }
-    .content_sect div {
-        order: 1;
-    }
+  .content_sect picture {
+    order: 2;
+  }
+  .content_sect div {
+    order: 1;
+  }
+}
+
+.section-main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #eee;
+}
+
+.section-main section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.section-main .header {
+  background-color: var(--strong_blue);
+  color: #eee;
+  padding: 1rem;
+  font-size: 21px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.section-main section {
+  background-color: #eee;
+}
+
+.section-main section:nth-child(2),
+.section-main section:nth-child(6) {
+  background-color: var(--strong_blue);
+}
+
+.section-main .header {
+  position: sticky;
+  top: 0px;
+  overflow: hidden;
+  text-wrap: nowrap;
+}
+
+.section-main .header:nth-child(3),
+.section-main .header:nth-child(7),
+.section-main .header:nth-child(8) {
+  background-color: #eee;
+  color: #000;
+}
+
+.section-main .header:nth-child(3) {
+  top: 69px;
+}
+
+.section-main .header:nth-child(5) {
+  top: 129px;
+}
+
+.section-main .header:nth-child(7) {
+  top: 189px;
+}
+
+.shrink {
+  animation-name: widthBar;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+}
+
+.expand {
+  animation-name: widthBarMax;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+}
+
+@keyframes widthBarMax {
+  0% {
+    width: 58px;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes widthBar {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 58px;
+  }
 }
